<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:background="@color/white">
    <LinearLayout
        android:layout_width="match_parent" android:layout_height="match_parent" android:orientation="vertical" >

        <include
            android:layout_height="wrap_content" android:layout_width="match_parent"
            layout="@layout/toolbar_add_post" android:id="@+id/toolbar"/>

        <LinearLayout
            android:layout_width="match_parent" android:layout_height="wrap_content"
            android:orientation="horizontal" android:layout_marginTop="8sp"
            android:layout_marginLeft="24sp" android:layout_marginRight="24sp">
            <ImageView
                android:layout_width="16sp" android:layout_height="16sp"
                android:background="@drawable/icon_tags" android:backgroundTint="@color/black"/>
            <TextView
                android:layout_width="wrap_content" android:layout_height="wrap_content"
                android:textSize="12sp" android:textColor="@color/textOffBlack"
                android:text="@string/tags" android:layout_marginLeft="12sp"/>
        </LinearLayout>

        <android.support.v7.widget.RecyclerView
            android:layout_width="match_parent" android:layout_height="wrap_content"
            android:id="@+id/rvTags" android:paddingTop="8sp"
            android:layout_below="@+id/toolbar"/>

        <LinearLayout
            android:layout_width="match_parent" android:layout_height="wrap_content"
            android:orientation="horizontal" android:layout_marginTop="16sp"
            android:layout_marginLeft="24sp" android:layout_marginRight="24sp">
            <ImageView
                android:layout_width="16sp" android:layout_height="16sp"
                android:background="@drawable/icon_edit" android:backgroundTint="@color/black"/>
            <TextView
                android:layout_width="wrap_content" android:layout_height="wrap_content"
                android:textSize="12sp" android:textColor="@color/textOffBlack"
                android:text="@string/open_or_close" android:layout_marginLeft="12sp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent" android:layout_height="wrap_content"
            android:orientation="horizontal" android:layout_marginTop="8sp"
            android:layout_marginLeft="24sp" android:layout_marginRight="24sp">
            <TextView
                android:layout_width="match_parent" android:layout_height="wrap_content"
                android:id="@+id/tvOpenPost" android:text="@string/open_post"
                android:textColor="@color/white" android:textSize="12sp"
                android:layout_marginRight="1sp" android:background="@color/black"
                android:paddingTop="16sp" android:paddingBottom="16sp"
                android:layout_weight="1" android:gravity="center_horizontal"/>
            <TextView
                android:layout_width="match_parent" android:layout_height="wrap_content"
                android:id="@+id/tvClosePostCount" android:text="@string/close_post"
                android:textColor="@color/white" android:textSize="12sp"
                android:layout_marginLeft="1sp" android:background="@color/black"
                android:paddingTop="16sp" android:paddingBottom="16sp"
                android:layout_weight="1" android:gravity="center_horizontal"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent" android:layout_height="wrap_content"
            android:orientation="horizontal" android:layout_marginTop="16sp"
            android:layout_marginLeft="24sp" android:layout_marginRight="24sp">
            <ImageView
                android:layout_width="16sp" android:layout_height="16sp"
                android:background="@drawable/icon_edit" android:backgroundTint="@color/black"/>
            <TextView
                android:layout_width="wrap_content" android:layout_height="wrap_content"
                android:textSize="12sp" android:textColor="@color/textOffBlack"
                android:text="@string/your_thoughts" android:layout_marginLeft="12sp"/>
        </LinearLayout>

        <EditText
            android:layout_width="match_parent" android:layout_height="wrap_content"
            android:id="@+id/etContent" android:singleLine="false"
            android:maxLines="10" android:inputType="textCapSentences|textMultiLine"
            android:textSize="15sp" android:textColor="@color/textBlack"
            android:hint="Type your thooughts here..." android:minHeight="128sp"
            android:layout_marginRight="24sp" android:layout_marginLeft="24sp"/>

        <Button
            android:layout_width="match_parent" android:layout_height="wrap_content"
            android:id="@+id/bAddPost" android:text="@string/add_post"
            android:textSize="15sp" android:textColor="@color/textWhite"
            android:background="@drawable/button_submit" android:textAllCaps="true"
            android:layout_marginTop="16sp"/>
    </LinearLayout>
</ScrollView>