<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:orientation="vertical"
    android:layout_width="match_parent" android:layout_height="match_parent" android:background="@color/white">

    <include
        android:layout_width="match_parent" android:layout_height="wrap_content"
        layout="@layout/toolbar_close_post" android:id="@+id/toolbar"/>

    <EditText
        android:layout_width="match_parent" android:layout_height="220sp"
        android:id="@+id/etContent" android:background="@color/transparentToolbar"
        android:textColor="@color/textBlack" android:textSize="15sp"
        android:gravity="center_horizontal" android:text="@string/samples_content_3"
        android:paddingTop="8sp" android:paddingRight="8sp" android:paddingLeft="8sp"
        android:layout_below="@+id/toolbar"/>

    <ImageView
        android:layout_width="match_parent" android:layout_height="1sp"
        android:background="@color/alphaBlack" android:id="@+id/ivDivider"
        android:layout_below="@+id/etContent"/>

    <android.support.v7.widget.RecyclerView
        android:layout_width="match_parent" android:layout_height="match_parent"
        android:id="@+id/rvSuggestion" android:paddingTop="8sp"
        android:layout_below="@+id/ivDivider" android:layout_above="@+id/lButton"/>

    <LinearLayout
        android:layout_width="match_parent" android:layout_height="wrap_content"
        android:orientation="horizontal" android:id="@+id/lButton" android:layout_alignParentBottom="true">
        <Button
            android:layout_width="match_parent" android:layout_height="wrap_content"
            android:id="@+id/bSave" android:layout_marginRight="1sp"
            android:text="@string/save" android:textAllCaps="true"
            android:textColor="@color/textWhite" android:textSize="15sp"
            android:background="@drawable/button_submit" android:layout_weight="1"/>
        <Button
            android:layout_width="match_parent" android:layout_height="wrap_content"
            android:id="@+id/bClosePost" android:layout_marginRight="1sp"
            android:text="@string/close_post" android:textAllCaps="true"
            android:textColor="@color/textWhite" android:textSize="15sp"
            android:background="@drawable/button_submit" android:layout_weight="1"/>
    </LinearLayout>

</RelativeLayout>