<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:background="@color/white" android:overScrollMode="never">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent" android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
        <android.support.design.widget.CollapsingToolbarLayout
            android:layout_width="match_parent" android:layout_height="wrap_content"
            android:fitsSystemWindows="true" app:titleEnabled="false"
            app:layout_scrollFlags="scroll|exitUntilCollapsed|snap">

            <!--BottomMargin = 48+12-->
            <RelativeLayout
                android:layout_width="match_parent" android:layout_height="match_parent"
                android:layout_marginTop="?attr/actionBarSize" android:paddingBottom="60dp"
                app:layout_collapseMode="parallax" android:background="@color/white">

                <include
                    layout="@layout/circular_image_view_108" android:id="@+id/iProfilePic"
                    android:layout_width="108sp" android:layout_height="108sp"
                    android:layout_marginTop="24sp" android:layout_marginLeft="32sp"/>

                <LinearLayout
                    android:layout_width="match_parent" android:layout_height="wrap_content"
                    android:id="@+id/lPostCount" android:layout_toRightOf="@+id/iProfilePic"
                    android:orientation="horizontal" android:layout_marginLeft="24sp"
                    android:layout_marginTop="24sp">

                    <RelativeLayout
                        android:layout_width="match_parent" android:layout_height="wrap_content"
                        android:layout_weight="1">
                        <TextView
                            android:layout_width="match_parent" android:layout_height="wrap_content"
                            android:textColor="@color/textBlack" android:textSize="16sp"
                            android:id="@+id/tvOpenPostCount" android:gravity="center_horizontal"
                            android:text="@string/sample_open_post_count"/>
                        <TextView
                            android:layout_width="match_parent" android:layout_height="wrap_content"
                            android:textColor="@color/textOffBlack" android:textSize="11sp"
                            android:text="@string/open_posts" android:layout_below="@+id/tvOpenPostCount"
                            android:gravity="center_horizontal"/>
                    </RelativeLayout>

                    <RelativeLayout
                        android:layout_width="match_parent" android:layout_height="wrap_content"
                        android:layout_marginRight="12sp" android:layout_marginLeft="12sp"
                        android:layout_weight="1">
                        <TextView
                            android:layout_width="match_parent" android:layout_height="wrap_content"
                            android:textColor="@color/textBlack" android:textSize="16sp"
                            android:id="@+id/tvClosePostCount" android:gravity="center_horizontal"
                            android:text="@string/sample_close_post_count"/>
                        <TextView
                            android:layout_width="match_parent" android:layout_height="wrap_content"
                            android:textColor="@color/textOffBlack" android:textSize="11sp"
                            android:text="@string/close_posts" android:layout_below="@+id/tvClosePostCount"
                            android:gravity="center_horizontal"/>
                    </RelativeLayout>

                </LinearLayout>

                <TextView
                    android:layout_width="match_parent" android:layout_height="wrap_content"
                    android:textSize="14sp" android:textColor="@color/textOffBlack"
                    android:layout_marginLeft="24sp" android:layout_marginTop="12sp"
                    android:id="@+id/tvTags" android:layout_below="@+id/lPostCount"
                    android:layout_toRightOf="@+id/iProfilePic" android:layout_marginRight="24sp"/>

                <TextView
                    android:layout_width="wrap_content" android:layout_height="wrap_content"
                    android:textColor="@color/textBlack" android:textStyle="bold"
                    android:id="@+id/tvName" android:textSize="14sp"
                    android:layout_marginLeft="32sp" android:layout_marginTop="8sp"
                    android:layout_below="@id/iProfilePic" android:text="@string/sample_name1"/>

                <TextView
                    android:layout_width="wrap_content" android:layout_height="wrap_content"
                    android:id="@+id/tvBio" android:textSize="13sp"
                    android:textColor="@color/textOffBlack" android:text="@string/sample_bio"
                    android:layout_marginLeft="32sp" android:layout_marginTop="8sp"
                    android:layout_below="@id/tvName"/>
            </RelativeLayout>

            <include
                android:id="@+id/lToolbar" layout="@layout/toolbar_profile"
                android:layout_height="?attr/actionBarSize" android:layout_width="match_parent"
                android:layout_gravity="top" android:layout_marginBottom="48dp"
                app:layout_collapseMode="pin" />

            <android.support.design.widget.TabLayout
                android:layout_width="match_parent" android:layout_height="wrap_content"
                android:id="@+id/tlPost" android:layout_gravity="bottom"
                app:tabIndicatorColor="@android:color/white" app:tabSelectedTextColor="@android:color/white"
                app:tabTextColor="@color/textWhite" android:background="@color/black"/>

            <!--<View-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="match_parent"-->
                <!--android:alpha="0.3"-->
                <!--android:background="@android:color/white"-->
                <!--android:fitsSystemWindows="true"/>-->
        </android.support.design.widget.CollapsingToolbarLayout>
    </android.support.design.widget.AppBarLayout>

    <android.support.v4.view.ViewPager
        android:layout_width="match_parent" android:layout_height="match_parent"
        android:id="@+id/vpPost" app:layout_behavior="@string/appbar_scrolling_view_behavior"/>

    <android.support.design.widget.FloatingActionButton
        android:layout_width="64sp" android:layout_height="64sp"
        android:background="@drawable/button_submit" android:id="@+id/fabAddPost"
        android:src="@drawable/icon_add" android:tint="@color/white"
        android:layout_marginBottom="16sp" android:layout_marginRight="16sp"
        android:layout_gravity="bottom|right" app:fabSize="normal"/>

</android.support.design.widget.CoordinatorLayout>